--- a/src/components/UI/Spinner/Spinner.css
+++ b/src/components/UI/Spinner/Spinner.css
@@ -4,10 +4,10 @@
   border-radius: 50%;
 }
 .Loader {
-  color: #521751;
+  color: #ee6e73;
   font-size: 11px;
   text-indent: -99999em;
-  margin: 55px auto;
+  margin: 200px auto;
   position: relative;
   width: 10em;
   height: 10em;
@@ -19,7 +19,7 @@
 .Loader:before,
 .Loader:after {
   position: absolute;
-  content: '';
+  content: "";
 }
 .Loader:before {
   width: 5.2em;
